[gd_scene load_steps=2 format=3 uid="uid://settings_scene"]

[ext_resource type="Script" path="res://scripts/ui/settings.gd" id="1_settings"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -320.0
offset_right = 300.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "设置"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="FullscreenContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="FullscreenLabel" type="Label" parent="MainContainer/FullscreenContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "独占全屏 (1920x1080)"
horizontal_alignment = 1

[node name="SwitchContainer" type="HBoxContainer" parent="MainContainer/FullscreenContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StatusLabel" type="Label" parent="MainContainer/FullscreenContainer/SwitchContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "窗口模式"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FullscreenSwitch" type="CheckButton" parent="MainContainer/FullscreenContainer/SwitchContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
theme_override_font_sizes/font_size = 18
text = ""

[node name="SpacerCRT" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="CRTContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CRTLabel" type="Label" parent="MainContainer/CRTContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CRT滤镜"
horizontal_alignment = 1

[node name="SwitchContainerCRT" type="HBoxContainer" parent="MainContainer/CRTContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StatusLabelCRT" type="Label" parent="MainContainer/CRTContainer/SwitchContainerCRT"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "开启"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CRTSwitch" type="CheckButton" parent="MainContainer/CRTContainer/SwitchContainerCRT"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
theme_override_font_sizes/font_size = 18
text = ""

[node name="SpacerBloom" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="BloomContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BloomLabel" type="Label" parent="MainContainer/BloomContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Bloom泛光"
horizontal_alignment = 1

[node name="SwitchContainerBloom" type="HBoxContainer" parent="MainContainer/BloomContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StatusLabelBloom" type="Label" parent="MainContainer/BloomContainer/SwitchContainerBloom"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "开启"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BloomSwitch" type="CheckButton" parent="MainContainer/BloomContainer/SwitchContainerBloom"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
theme_override_font_sizes/font_size = 18
text = ""

[node name="SpacerBurst" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="BurstEffectContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BurstEffectLabel" type="Label" parent="MainContainer/BurstEffectContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "大招充能特效"
horizontal_alignment = 1

[node name="SwitchContainerBurst" type="HBoxContainer" parent="MainContainer/BurstEffectContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StatusLabelBurst" type="Label" parent="MainContainer/BurstEffectContainer/SwitchContainerBurst"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "开启"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BurstEffectSwitch" type="CheckButton" parent="MainContainer/BurstEffectContainer/SwitchContainerBurst"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
theme_override_font_sizes/font_size = 18
text = ""

[node name="SpacerMovementTrail" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="MovementTrailContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MovementTrailLabel" type="Label" parent="MainContainer/MovementTrailContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "角色移动拖尾"
horizontal_alignment = 1

[node name="SwitchContainerMovementTrail" type="HBoxContainer" parent="MainContainer/MovementTrailContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StatusLabelMovementTrail" type="Label" parent="MainContainer/MovementTrailContainer/SwitchContainerMovementTrail"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "开启"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MovementTrailSwitch" type="CheckButton" parent="MainContainer/MovementTrailContainer/SwitchContainerMovementTrail"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
theme_override_font_sizes/font_size = 18
text = ""

[node name="SpacerAudio" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="AudioBGMContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BGMLabel" type="Label" parent="MainContainer/AudioBGMContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "背景音乐音量"
horizontal_alignment = 1

[node name="SliderContainerBGM" type="HBoxContainer" parent="MainContainer/AudioBGMContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BGMValueLabel" type="Label" parent="MainContainer/AudioBGMContainer/SliderContainerBGM"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BGMVolumeSlider" type="HSlider" parent="MainContainer/AudioBGMContainer/SliderContainerBGM"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(280, 0)
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="SpacerAudio2" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="AudioSFXContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SFXLabel" type="Label" parent="MainContainer/AudioSFXContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "音效音量"
horizontal_alignment = 1

[node name="SliderContainerSFX" type="HBoxContainer" parent="MainContainer/AudioSFXContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SFXValueLabel" type="Label" parent="MainContainer/AudioSFXContainer/SliderContainerSFX"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="MainContainer/AudioSFXContainer/SliderContainerSFX"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(280, 0)
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Spacer2" type="Control" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "返回"
